<resources>
    <string name="app_name">TaskManager</string>
    <string name="stat">Status: </string>
    <string name="help">Help</string>
    <string name="how">Click: Plus button to create tasks. Pencil to update. Trash to delete</string>
    <string name="type_prompt">Choose task type</string>
    <string name="title">Task title</string>
    <string name="desc">Description of the task</string>
    <string name="save">Save</string>
    <string name="emptynote">Title or description can not be empty!</string>
    <string name="default_stat">Not Done</string>

    <string name="d_menu">How to Use</string>
    <string name="d_cont">Click: \nPlus button to create tasks \nPencil to update \nTrash to delete
    \nTask type icon to mark it as Done \nTasks marked as done will have green color </string>
    <string name="d_ok">Now you can use task manager!!</string>
    <string name="d_btn">OK</string>

    <string-array name="type_arrays">
        <item>Pet Walk</item>
        <item>Mail</item>
        <item>Groceries</item>
        <item>Cooking</item>
        <item>Game</item>
    </string-array>
</resources>
