<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".NoteActivity">

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/title"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/sType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:entries="@array/type_arrays"
        android:hint="Type"
        android:prompt="@string/type_prompt" />

    <DatePicker
        android:id="@+id/editDate"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:scrollbarSize="30dp" />

    <EditText
        android:id="@+id/editDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/desc"
        android:inputType="textMultiLine"
        android:maxHeight="90dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/stats"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/stat"
            android:visibility="visible" />

        <TextView
            android:id="@+id/vStat"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/default_stat"
            android:visibility="visible" />
    </LinearLayout>

    <Button
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="#ffffffff"
        android:theme="@style/Widget.AppCompat.Button" />

</androidx.appcompat.widget.LinearLayoutCompat>